# microcore

./: .gitignore  CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/core/: datasource.h  ijob.h  ijobfactory.h  irequestjobfactory.h  iresultbuilder.h  pipe.h  qobjectptr.h
src/lib/data/: dataoperator.h  datasource.h  datasourcemodel.h  datastore.h  idatastore.h  iitem.h  imutablemodel.h  item.h  itemmodifier.h  model.h  modelappender.h  modeldata.h  modeloperator.h  type_helper.h
src/lib/error/: error.cpp  error.h
src/lib/http/: httprequest.cpp  httprequest.h  httprequestfactory.cpp  httprequestfactory.h  httptypes.h  requestjob.h
src/lib/include/microcore/core/: executor.h  globals.h  ijob.h  ijobfactory.h  listenerrepository.h  pipe.h
src/lib/include/microcore/data/: datastore.h  idatastore.h  iindexeddatastore.h  iitem.h  imodel.h  imutablemodel.h  indexeddatastore.h  indexedmodel.h  item.h  model.h
src/lib/include/microcore/error/: error.h
src/lib/include/microcore/http/: httprequest.h  httprequestfactory.h  httptypes.h
src/lib/include/microcore/json/: jsonrequestfactory.h  jsontypes.h
src/lib/include/microcore/qt/: iviewitem.h  iviewmodel.h  qobjectptr.h  viewcontroller.h  viewitem.h  viewitemcontroller.h  viewmodel.h  viewmodelcontroller.h
src/lib/json/: jsonrequestfactory.cpp  jsonrequestfactory.h  jsontypes.h
src/lib/qt/: imodel.h  iviewitem.h  iviewmodel.h  iviewmodelcontroller.h  model.h  viewcontroller.cpp  viewcontroller.h  viewitem.h  viewitemcontroller.h  viewmodel.h  viewmodelcontroller.h
src/lib/src/error/: error.cpp
src/lib/src/http/: httprequest.cpp  httprequestfactory.cpp
src/lib/src/json/: jsonrequestfactory.cpp
src/lib/src/qt/: viewcontroller.cpp
src/tests/: CMakeLists.txt  mockdatasourcelistener.h  mockexecutorlistener.h  mockitemmodifierlistener.h  mockjob.h  mockjobfactory.h  mockmodelappenderlistener.h  mockmodellistener.h  mockmodeloperatorlistener.h  tst_datasource.cpp  tst_datasource_simple.cpp  tst_datasourcemodel.cpp  tst_datastore.cpp  tst_executor.cpp  tst_http.cpp  tst_indexeddatastore.cpp  tst_indexedmodel.cpp  tst_itemmodifier.cpp  tst_json.cpp  tst_listenerrepository.cpp  tst_main.cpp  tst_microgen.cpp  tst_microgen_objecttest.cpp  tst_microgen_simple.cpp  tst_microgen_test.cpp  tst_model.cpp  tst_modelappender.cpp  tst_modeldata.cpp  tst_modeloperator.cpp  tst_pipe.cpp  tst_qtmodel.cpp  tst_qtviewmodel.cpp  tst_type_helper.cpp  tst_viewcontroller.cpp
src/tests/includes/: tst_core_executor.cpp  tst_core_globals.cpp  tst_core_ijob.cpp  tst_core_ijobfactory.cpp  tst_core_listenerrepository.cpp  tst_core_pipe.cpp  tst_core_qobjectptr.cpp  tst_data_dataoperator.cpp  tst_data_datasource.cpp  tst_data_datasourcemodel.cpp  tst_data_datastore.cpp  tst_data_idatastore.cpp  tst_data_iindexeddatastore.cpp  tst_data_imodel.cpp  tst_data_imutablemodel.cpp  tst_data_indexedmodel.cpp  tst_data_item.cpp  tst_data_itemmodifier.cpp  tst_data_model.cpp  tst_data_modelappender.cpp  tst_data_modeldata.cpp  tst_data_modeloperator.cpp  tst_data_type_helper.cpp  tst_http_httptypes.cpp  tst_json_jsontypes.cpp  tst_qt_iviewitem.cpp  tst_qt_iviewmodel.cpp  tst_qt_iviewmodelcontroller.cpp  tst_qt_qobjectptr.cpp  tst_qt_viewcontroller.cpp  tst_qt_viewitem.cpp  tst_qt_viewitemcontroller.cpp  tst_qt_viewmodel.cpp  tst_qt_viewmodelcontroller.cpp
src/tests/microgen/: list_test.yaml  nested_test.yaml  object_test.yaml  test.yaml
src/tests/server/: app.coffee  package.json
src/tools/: CMakeLists.txt  bean-nested.cpp.tpl  bean-nested.h.tpl  bean.cpp.tpl  bean.h.tpl  beanobject-nested.cpp.tpl  beanobject-nested.h.tpl  beanobject.cpp.tpl  beanobject.h.tpl  exception.py  factory.h.tpl  factoryjson-nested.cpp.tpl  factoryjson.cpp.tpl  factorylistjson.cpp.tpl  generator.py  microgen.py  transformer.py  types.h.tpl  typesjson.h.tpl  typeslistjson.h.tpl
src/tools/cmake/: MicrogenMacros.cmake
src/tools/tests/: tst_generator.py  tst_transformer.py
tools/: gencoverage.sh
